# venomx

./: .cruft.json  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  embeddings.parquet  pyproject.toml  tox.ini
.github/workflows/: deploy-docs.yml  pypi-publish-dryrun.yml  pypi-publish.yml  qc.yml  tests.yml
docs/: conf.py  index.rst
src/venomx/: __init__.py
src/venomx/model/: embedding.yaml  embeddings_pa.py  venomx.py  venomx.yaml
src/venomx/tools/: cli.py  file_io.py
tests/: __init__.py  conftest.py  test_cli.py  test_demo.py  test_file_io.py
tests/input/: example.combined.yaml
