[project]
name = "venomx"
version = "0.0.0"
description = "venomx"
authors = [
    {name="Chris Mungall", email="cjmungall@lbl.gov"},
]
license = "BSD-3-Clause"
readme = "README.md"

requires-python=">=3.10,<4,<3.14"
dependencies = [
    "click",
    "importlib-metadata>=4.8.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "pydantic",
]


[dependency-groups]

dev = [
    "pytest>=7.1.2",
    "tox>=3.25.1",
    "pre-commit>=3.3.3",
    "linkml>=1.6.9",
    "ruff",
    "codespell",
    "black",
]

[project.optional-dependencies]

docs=[
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.2.0",
    "sphinx-click>=4.3.0",
    "myst-parser>=0.18.1",
]

[project.scripts]
venomx = "venomx.tools.cli:main"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
lint.extend-ignore = [
    "D203",  # `1 blank line required before class docstring`
    "D211",  # `no-blank-line-before-class`
    "D212",  # `multi-line-summary-first-line`
    "D401",  # `First line of docstring should be in imperative mood`

    #I turned these off to push a major verisioning fix in, 
    #they should be turned back on by someone with more bandwidth to look at 
    #venmox internals.
    "D100",
    "D101",
    "D103",
    "D104",
    "D200",
    "D400",
    "D415",
    "E501",
    "F841",
    ]
line-length = 120
# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
# Select or ignore from https://beta.ruff.rs/docs/rules/
lint.select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit
    "W",  # Warning
    "C90", #mccabe complexity
#    "ARG", #Arguments
]
lint.unfixable = []
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "ARG001",
    "D100",
    "D",
    "I"
]


[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.codespell]
skip = "*.po,*.ts,.git,pyproject.toml"
count = ""
quiet-level = 3
# ignore-words-list = ""

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
